# SoftCOM

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HELP  LICENSE  MicroCOM.py  README.md  SECURITY.md  ccom.py  main.py  pylintrc  pyproject.toml  requirements.txt  settings.json  setup.cfg  softcom.py
.github/workflows/: build.yml  codeql.yml  greetings.yml
SoftCOM/: __init__.py  __main__.py  gui_controller.py  softcom.py  version.py
SoftCOM/support/: __init__.py  input_dialog.py  serial_manage.py  serial_simulator.py
support/: exceptions.py  gui_controller.py  input_dialog.py  message_dialog.py  progress_bar.py  radiolist_dialog.py  save_settings.py  serial_manage.py  serial_simulator.py  version.py
