[metadata]
name = SoftCOM
version = attr:SoftCOM.__version__
description = 'SoftCOM is a free software for accessing the serial port.'
author = Integrated Software Technologies Inc.
author_email = matt@integratedsw.tech
url = https://github.com/mathieeo/SoftCOM
license_files = LICENSE

[options]
packages = find:
include_package_data = True
python_requires= >=3.9
install_requires =
    prompt_toolkit
    Pygments~=2.11.2
    pyperclip
    serial~=0.0.97

[options.packages.find]
exclude = tests

[options.package_data]
SoftCOM = "py.typed"

[sdist]
formats = zip, gztar

[options.entry_points]
console_scripts =
    softcom = SoftCOM.softcom:main